@@ -1767,8 +1767,7 @@ public class MapFacadeBean {
 				}
 			} else if (metaModel.containsMetaPropertyView(memberName)) {
 				metaModel.getMetaPropertyView(memberName).validate(errors, values, creating);									
-			// tmr } else {
-			} else if (!MapFacade.MODEL_NAME.equals(memberName)) { // tmr En changelog	
+			} else if (!MapFacade.MODEL_NAME.equals(memberName)) { 
 				log.warn(XavaResources.getString("not_validate_member_warning", memberName, metaModel.getName()));
 			}
 		} catch (XavaException ex) {
